# nabu

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  SECURITY.md  deny.toml  release-plz.toml
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
.github/rulesets/: README.md  main-branch.json  release-tags.json
.github/workflows/: ci.yml  deploy-pages.yml  release-plz.yml  release.yml  semantic-acceptance.yml
crates/nabu-adapters/: CHANGELOG.md  Cargo.toml  README.md
crates/nabu-adapters/src/: lib.rs
crates/nabu-adapters/templates/: claude-settings.fragment.json  codex-hooks.json  harness-history.ts
crates/nabu-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/nabu-cli/src/: backfill.rs  backup.rs  bench.rs  jsonc_edit.rs  main.rs  mcp_config.rs  opencode_http.rs  paths.rs  progress.rs  render.rs  testsupport.rs  theme.rs  wizard.rs
crates/nabu-core/: CHANGELOG.md  Cargo.toml  README.md  schema.sql
crates/nabu-core/api/: public-api-default.txt
crates/nabu-core/src/: concept_expansion.rs  config.rs  db.rs  doctor.rs  document.rs  error.rs  event.rs  export.rs  identity.rs  index.rs  ingest.rs  json.rs  lib.rs  options.rs  paths.rs  provenance.rs  purge.rs  raw.rs  read.rs  redact.rs  semantic.rs  semantic_api.rs  tests.rs
crates/nabu-core/src/backfill/: checkpoint.rs  claude.rs  codex.rs  mod.rs  opencode.rs
crates/nabu-core/src/search/: corroborate.rs  mod.rs
crates/nabu-mcp/: CHANGELOG.md  Cargo.toml  README.md
crates/nabu-mcp/src/: lib.rs
crates/nabu-mcp/tests/: agent_contracts.rs
docs/: USAGE.md  capture-guarantees.md  event-envelope.schema.json  mcp-tools.schema.json  release-notes.md
docs/demo/: compaction-beat.md
fixtures/acceptance-home/raw/claude/: claude_fixture-session.jsonl
fixtures/acceptance-home/raw/codex/: codex_fixture-session.jsonl
fixtures/acceptance-home/raw/opencode/: opencode_fixture-session.jsonl
fixtures/bench/: events.jsonl
fixtures/claude-code/: message_display_delta.json  message_display_final.json  post_compact.json  post_tool_batch.json  post_tool_use.json  post_tool_use_failure.json  pre_compact.json  pre_tool_use.json  secret_redaction.json  session_end.json  session_start.json  stop.json  stop_failure.json  transcript.jsonl  user_prompt_submit.json
fixtures/codex/: app-server-notifications.jsonl  exec-json.jsonl  post_compact.json  post_tool_use.json  pre_compact.json  pre_tool_use.json  session_start.json  stop.json  subagent_start.json  subagent_stop.json  user_prompt_submit.json
fixtures/codex/sessions/: session_fixture.jsonl
fixtures/mixed/claude-code/: transcript.jsonl
fixtures/mixed/codex/: session_fixture.jsonl
fixtures/mixed/opencode/: server_session_messages.json  truncated_source.jsonl  truncated_source.jsonl.checkpoint.json
fixtures/native/claude/projects/sanitized-project/: 11111111-1111-4111-8111-111111111111.jsonl
fixtures/native/codex/sessions/: rollout-2026-06-18T09-00-00-22222222-2222-4222-8222-222222222222.jsonl
fixtures/native/opencode/storage/message/33333333-3333-4333-8333-333333333333/: msg_1.json  msg_2.json
fixtures/native/opencode/storage/part/msg_1/: m8_parts.json  part_1.json
fixtures/native/opencode/storage/session/: project_meta.json
fixtures/opencode/: command_executed.json  file_edited.json  message_part_removed.json  message_part_updated.json  message_removed.json  message_updated.json  server_session_messages.json  session_compacted.json  session_created.json  session_error.json  session_idle.json  session_updated.json  source_discontinuity.json  tool_execute_after.json  tool_execute_before.json
fixtures/redaction/: secrets.txt
fixtures/semantic/: retrieval.json
scripts/: check-public-api.sh  setup-hooks.sh
site/: README.md
site/design-system/: README.md  styles.css
site/design-system/tokens/: colors.css  effects.css  fonts.css  spacing.css  typography.css
site/landing/: index.html  landing.css
