[package]
name = "nabu-cli"
description = "nabu: a local-first, cross-agent history keeper for coding agents (Codex, Claude Code, OpenCode). Installs the `nabu` binary."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
default = []
semantic = [
  "nabu-adapters/semantic",
  "nabu-core/semantic",
  "nabu-mcp/semantic",
]

[[bin]]
name = "nabu"
path = "src/main.rs"

[dependencies]
clap.workspace = true
console.workspace = true
dialoguer.workspace = true
nabu-adapters = { path = "../nabu-adapters", version = "0.1.0" }
nabu-core = { path = "../nabu-core", version = "0.1.0" }
nabu-mcp = { path = "../nabu-mcp", version = "0.1.0" }
hex.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true

[dev-dependencies]
tempfile.workspace = true
